test/libyul/yulSyntaxTests/switch_invalid_body.yul
{
    switch 42
    case 1 mul
    case 2 {}
    default {}
}
// ----
// ParserError 2314: (27-30): Expected '{' but got identifier
